--- a/src/pages/prueba/prueba.html
+++ b/src/pages/prueba/prueba.html
@@ -9,7 +9,7 @@
   <script type="module" src="../general.js"></script>
 </head>
 <body>
-  <h1>SOY LA PRUEBA</h1>
+  <h1>SOY LA PRUEBA sisisisis</h1>
   <!--Ustedes deciden si usarán ES Modules-->
   <script src="prueba.css"></script>
 </body>
