--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h1>Inicio soy guapo pajas esta madre si corrio a la vrg</h1>
+  Hola
   <a href="/prueba">Dirección a prueba</a>
   <script src="./index.js"></script>
 </body>
