fix: Problema al servir archivos de las carpetas

--- a/src/pages/prueba/prueba.html
+++ b/src/pages/prueba/prueba.html
@@ -11,6 +11,6 @@
 <body>
   <h1>SOY LA PRUEBA sisisisis</h1>
   <!--Ustedes deciden si usarán ES Modules-->
-  <script src="prueba.css"></script>
+  <script type="module" src="prueba.js"></script>
 </body>
 </html>
