feat: Añadi LiveReload o Hot Reload para que sea mas comodo para usd. Tengan paciencia tiene un lag de 2segundos pero si son pacientes pues les ayudará

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
   <script type="module" src="./general.js"></script>
 </head>
 <body>
-  <h1>Inicio soy guapo pajas esta madre si corrio a la vrg</h1>
+  <h1>Inicio soy guapo pajas esta madre si por que no sera</h1>
   Hola
   <a href="/prueba">Dirección a prueba</a>
   <script src="./index.js"></script>
