feat: iniciando el navbar

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,14 +1,29 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  
+  <link rel="icon" href="../assets/icons/page-icon.svg" type="img/svg">
+
+  <meta name="description" content="Wonder Store - Tienda en linea hecha por fans para fans. ¡Deja que te sorprenda!">
+
+  <meta property="og:title" content="Wonder Store - Tienda en linea hecha por fans para fans. ¡Deja que te sorprenda!">
+
+  <meta property="og:image"
+    content="../assets/icons/page-icon.svg">
+
+  <meta property="og:image:alt" content="Icono de la tienda">
+
   <title>WonderStore</title>
-  <link rel="stylesheet" href="styles.css">
   <script type="module" src="./general.js"></script>
 </head>
 <body>
+  <header class="nav-container">
+
+  </header>
   <h1>Inicio soy guapo pajas esta madre si por que no sera</h1>
   Hola
   <a href="/prueba">Dirección a prueba</a>
