feat: Efecto paralax y todos los banner ~ Hay que mejorar las imagenes

--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,18 +18,45 @@
 
   <title>WonderStore - Products</title>
   <link rel="stylesheet" href="products.css">
+  <link rel="stylesheet" href="../../lib/paralax-vanilla-erikengervall/paralax.css">
   <script type="module" src="../general.js"></script>
 </head>
+
 <body>
   <main>
     <header>
-      <div class="banner-container general-skeleton">
-        <!-- <div class="general-skeleton banner-category-container on-load-img-fn">
-          <img class="banner-category" height="334px" width="100%" loading="lazy" id="banner-category">
-        </div> -->
-      </div>
+      <section class="banner-container general-skeleton">
+        <div class="banner-bg on-load-img-fn">
+          <img id="banner-category" alt="Banner Background">
+        </div>
+
+        <div class="banner-content on-load-img-fn">
+          <img alt="Banner title" id="banner-text-category">
+        </div>
+      </section>
     </header>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis ducimus dolor veniam porro quidem dignissimos minima error sequi laborum nesciunt tempora fugiat nemo repellat eaque, ipsum aperiam beatae? Vitae, ea.
+    Ipsum, natus asperiores. Quod mollitia ea magnam? Vel, maxime suscipit accusantium facere ea hic perferendis eius repellendus consequuntur quos deserunt delectus possimus veniam ut, perspiciatis est beatae, laudantium fuga! Recusandae?
+    Voluptates iure laborum veritatis quidem distinctio modi nisi, magni minima perspiciatis iste voluptatibus. In praesentium placeat maxime labore impedit officiis asperiores perspiciatis nisi libero repudiandae, quis possimus perferendis ad numquam.
+    Esse, alias beatae a commodi explicabo tempore impedit? Minima minus blanditiis id, dicta delectus culpa, consequatur reprehenderit itaque quas doloribus a nemo fugit reiciendis corporis commodi perferendis incidunt ex ut.
+    Aliquid nobis aliquam velit sapiente illo enim impedit suscipit, repudiandae incidunt dolorem eum accusamus excepturi consequuntur distinctio voluptate! Corrupti architecto dolore accusantium? Tempore numquam placeat, consectetur porro error alias nesciunt!
+    Dolor, incidunt dignissimos veritatis asperiores, magni consectetur dolores id eos ducimus labore quo cupiditate ipsa minus eius eveniet ad ipsam veniam debitis. Culpa distinctio deleniti rem iure asperiores impedit aspernatur.
+    Et ipsam, nulla molestias, vel laborum quasi tempora explicabo corporis maiores voluptatem beatae minus hic, nostrum aperiam id non optio voluptatum minima libero dignissimos a molestiae. Repellendus ratione iste consectetur.
+    Voluptatibus earum quia aspernatur quis ex sint dicta consectetur quam. Quod adipisci tempora corporis voluptatem ipsa tempore quas sit natus odit ipsam, at ullam incidunt illo beatae sequi officiis non!
+    Veniam culpa omnis blanditiis, dolorem, eveniet, recusandae amet temporibus sequi fuga autem nesciunt quia perferendis. Amet voluptas id est debitis quaerat nesciunt inventore officia velit. Beatae ratione dolor illo dicta.
+    Id minus quidem sapiente unde, nam ea temporibus eius veniam dolore tempore, animi voluptates consequatur doloremque, molestias itaque ratione neque illum at voluptatum natus? Perspiciatis vitae numquam corrupti adipisci distinctio.
+    Quae adipisci dignissimos fugit delectus expedita perspiciatis, temporibus voluptas aliquid neque facilis, autem quaerat reiciendis veniam eaque sequi nihil aliquam iure illo repudiandae. Id, dolorem. Laudantium rem voluptatibus minima autem.
+    Officiis quae iusto dignissimos soluta, tenetur impedit nisi iste quisquam ipsam, necessitatibus eveniet qui beatae et assumenda vero enim at, velit iure doloremque. Corrupti, pariatur sint sed similique iste deleniti.
+    Quo voluptas amet delectus possimus deserunt. Porro, ratione magni totam eveniet asperiores ad quod odio. Numquam repellat ut error non quis velit dolorum, ea inventore magnam mollitia, eligendi laboriosam natus?
+    Saepe est esse veritatis magnam suscipit, quos sapiente nisi totam, mollitia sit tempora eligendi eveniet temporibus enim! Temporibus suscipit, non in id, tempora dolor eos explicabo veniam voluptatem porro labore.
+    Dignissimos numquam nisi tempora iusto culpa debitis odio minus enim, assumenda, architecto deserunt vitae quidem ex natus illum est vero. Porro perferendis illum eligendi, quam aliquid obcaecati adipisci molestias expedita!
+    Voluptate asperiores cumque excepturi, perferendis unde in veritatis dignissimos ab voluptatum alias, hic illo, sequi nihil voluptates quibusdam facere nesciunt vel cum soluta blanditiis tempora dolores natus placeat? Eaque, incidunt.
+    Quia quis laborum architecto blanditiis nemo minima amet magnam. Praesentium vel, ut facere nobis reiciendis dolorem deleniti vero, deserunt laboriosam quis rerum, veritatis voluptatum cum voluptates fugiat ipsum beatae saepe.
+    Nesciunt minima pariatur vel doloremque harum ea corrupti quaerat dolorem soluta eos quibusdam repudiandae maxime dolor deserunt nemo, dicta vitae unde laborum dolores expedita iure et. Dolore veritatis illo error.
+    Nemo numquam itaque ex assumenda, aspernatur quidem sed aut ab saepe ipsam eius, cum accusamus, dicta tempore exercitationem? Corrupti dolores similique, quidem iusto sequi expedita enim sunt odio aut necessitatibus.
+    Repellendus quia itaque sapiente distinctio. Quisquam dolorem cum doloremque praesentium quae aperiam asperiores ipsum fugiat molestiae, eligendi tenetur. Corporis dicta reiciendis aspernatur voluptatibus consequatur officiis quasi beatae sint aperiam laboriosam.</p>
   </main>
   <script type="module" src="products.js"></script>
 </body>
+
 </html>
