Preparando para json

--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -34,27 +34,43 @@
           <img alt="Banner title" id="banner-text-category">
         </div>
       </section>
+
+      <!-- <section class="paralax-oscar bg-po">
+        <img src="../../assets/banners/anime-text.svg" alt="">
+      </section> -->
+
+      <div class="main-content-products-J">
+        <section class="filters-orders">
+          <div popover id="filter-options-panel" class="filter-options-panel">
+            <ul id="filter-options-list">
+
+            </ul>
+          </div>
+          <button popovertarget="filter-options-panel" class="filter-order-button filter-option">
+            <span class="material-symbols-outlined filter-order-icon">
+              filter_alt
+            </span>
+            <span class="filter-order-text">Filtrar</span>
+          </button>
+
+
+
+          <button class="filter-order-button order-option">
+            <span class="material-symbols-outlined filter-order-icon">
+              filter_list
+            </span>
+            <span class="filter-order-text">Ordernar por:</span>
+            <span id="order-option">Todos</span>
+          </button>
+        </section>
+      </div>
     </header>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis ducimus dolor veniam porro quidem dignissimos minima error sequi laborum nesciunt tempora fugiat nemo repellat eaque, ipsum aperiam beatae? Vitae, ea.
-    Ipsum, natus asperiores. Quod mollitia ea magnam? Vel, maxime suscipit accusantium facere ea hic perferendis eius repellendus consequuntur quos deserunt delectus possimus veniam ut, perspiciatis est beatae, laudantium fuga! Recusandae?
-    Voluptates iure laborum veritatis quidem distinctio modi nisi, magni minima perspiciatis iste voluptatibus. In praesentium placeat maxime labore impedit officiis asperiores perspiciatis nisi libero repudiandae, quis possimus perferendis ad numquam.
-    Esse, alias beatae a commodi explicabo tempore impedit? Minima minus blanditiis id, dicta delectus culpa, consequatur reprehenderit itaque quas doloribus a nemo fugit reiciendis corporis commodi perferendis incidunt ex ut.
-    Aliquid nobis aliquam velit sapiente illo enim impedit suscipit, repudiandae incidunt dolorem eum accusamus excepturi consequuntur distinctio voluptate! Corrupti architecto dolore accusantium? Tempore numquam placeat, consectetur porro error alias nesciunt!
-    Dolor, incidunt dignissimos veritatis asperiores, magni consectetur dolores id eos ducimus labore quo cupiditate ipsa minus eius eveniet ad ipsam veniam debitis. Culpa distinctio deleniti rem iure asperiores impedit aspernatur.
-    Et ipsam, nulla molestias, vel laborum quasi tempora explicabo corporis maiores voluptatem beatae minus hic, nostrum aperiam id non optio voluptatum minima libero dignissimos a molestiae. Repellendus ratione iste consectetur.
-    Voluptatibus earum quia aspernatur quis ex sint dicta consectetur quam. Quod adipisci tempora corporis voluptatem ipsa tempore quas sit natus odit ipsam, at ullam incidunt illo beatae sequi officiis non!
-    Veniam culpa omnis blanditiis, dolorem, eveniet, recusandae amet temporibus sequi fuga autem nesciunt quia perferendis. Amet voluptas id est debitis quaerat nesciunt inventore officia velit. Beatae ratione dolor illo dicta.
-    Id minus quidem sapiente unde, nam ea temporibus eius veniam dolore tempore, animi voluptates consequatur doloremque, molestias itaque ratione neque illum at voluptatum natus? Perspiciatis vitae numquam corrupti adipisci distinctio.
-    Quae adipisci dignissimos fugit delectus expedita perspiciatis, temporibus voluptas aliquid neque facilis, autem quaerat reiciendis veniam eaque sequi nihil aliquam iure illo repudiandae. Id, dolorem. Laudantium rem voluptatibus minima autem.
-    Officiis quae iusto dignissimos soluta, tenetur impedit nisi iste quisquam ipsam, necessitatibus eveniet qui beatae et assumenda vero enim at, velit iure doloremque. Corrupti, pariatur sint sed similique iste deleniti.
-    Quo voluptas amet delectus possimus deserunt. Porro, ratione magni totam eveniet asperiores ad quod odio. Numquam repellat ut error non quis velit dolorum, ea inventore magnam mollitia, eligendi laboriosam natus?
-    Saepe est esse veritatis magnam suscipit, quos sapiente nisi totam, mollitia sit tempora eligendi eveniet temporibus enim! Temporibus suscipit, non in id, tempora dolor eos explicabo veniam voluptatem porro labore.
-    Dignissimos numquam nisi tempora iusto culpa debitis odio minus enim, assumenda, architecto deserunt vitae quidem ex natus illum est vero. Porro perferendis illum eligendi, quam aliquid obcaecati adipisci molestias expedita!
-    Voluptate asperiores cumque excepturi, perferendis unde in veritatis dignissimos ab voluptatum alias, hic illo, sequi nihil voluptates quibusdam facere nesciunt vel cum soluta blanditiis tempora dolores natus placeat? Eaque, incidunt.
-    Quia quis laborum architecto blanditiis nemo minima amet magnam. Praesentium vel, ut facere nobis reiciendis dolorem deleniti vero, deserunt laboriosam quis rerum, veritatis voluptatum cum voluptates fugiat ipsum beatae saepe.
-    Nesciunt minima pariatur vel doloremque harum ea corrupti quaerat dolorem soluta eos quibusdam repudiandae maxime dolor deserunt nemo, dicta vitae unde laborum dolores expedita iure et. Dolore veritatis illo error.
-    Nemo numquam itaque ex assumenda, aspernatur quidem sed aut ab saepe ipsam eius, cum accusamus, dicta tempore exercitationem? Corrupti dolores similique, quidem iusto sequi expedita enim sunt odio aut necessitatibus.
-    Repellendus quia itaque sapiente distinctio. Quisquam dolorem cum doloremque praesentium quae aperiam asperiores ipsum fugiat molestiae, eligendi tenetur. Corporis dicta reiciendis aspernatur voluptatibus consequatur officiis quasi beatae sint aperiam laboriosam.</p>
+
+    <div class="main-content-products-J">
+      <section id="filters-active">
+
+      </section>
+    </div>
   </main>
   <script type="module" src="products.js"></script>
 </body>
