fix: Bug con los filtros

--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -54,7 +54,13 @@
           </button>
 
 
-
+          <div popover id="order-options-panel" class="order-options-panel">
+            <ul>
+              <li>Mayor precio</li>
+              <li>Menor precio</li>
+              <li>Todos</li>
+            </ul>
+          </div>
           <button class="filter-order-button order-option">
             <span class="material-symbols-outlined filter-order-icon">
               filter_list
