feat: Mostrando los productos del localStorage

--- a/src/test/products.html
+++ b/src/test/products.html
@@ -86,17 +86,17 @@
 
       </section>
 
-      <div id="product-notFound">
-        <h1>¡Lo sentimos no hay en inventario 😪, REGRESA PRONTO!</h1>
-      </div>
       <section id="products-container">
-        <article class="product-card product-skeleton">
-          <div class="product-img-container general-skeleton"></div>
+        <article class="product-card">
+          <div class="product-img-container general-skeleton on-load-img-fn">
+            <img class="product-img" src="https://m.media-amazon.com/images/I/61vFg+YuXPL._AC_SX679_.jpg"
+              alt="Super Mario Odyssey - Figura">
+          </div>
           <div class="product-info">
-            <h3 class="product-info-title general-skeleton general-skeleton-text"></h3>
-            <p class="product-info-category general-skeleton general-skeleton-text"></p>
-            <span class="product-info-price general-skeleton general-skeleton-text"></span>
-            <button class="general-btn product-add-cart-btn general-skeleton"></button>
+            <h3 class="product-info-title">Super Mario Odyssey - Figura</h3>
+            <p class="product-info-category">Videojuegos</p>
+            <span class="product-info-price">59.99</span>
+            <button class="general-btn product-add-cart-btn">Agregar al carrito</button>
           </div>
         </article>
         <article class="product-card product-skeleton">
@@ -108,40 +108,29 @@
             <button class="general-btn product-add-cart-btn general-skeleton"></button>
           </div>
         </article>
-        <article class="product-card product-skeleton">
-          <div class="product-img-container general-skeleton"></div>
+        <article class="product-card">
+          <div class="product-img-container on-load-img-fn">
+            <img class="product-img" src="https://m.media-amazon.com/images/I/61vFg+YuXPL._AC_SX679_.jpg"
+              alt="Super Mario Odyssey - Figura">
+          </div>
           <div class="product-info">
-            <h3 class="product-info-title general-skeleton general-skeleton-text"></h3>
-            <p class="product-info-category general-skeleton general-skeleton-text"></p>
-            <span class="product-info-price general-skeleton general-skeleton-text"></span>
-            <button class="general-btn product-add-cart-btn general-skeleton"></button>
+            <h3 class="product-info-title">Super Mario Odyssey - Figura</h3>
+            <p class="product-info-category">Videojuegos</p>
+            <span class="product-info-price">59.99</span>
+            <button class="general-btn product-add-cart-btn">Agregar al carrito</button>
           </div>
         </article>
-        <article class="product-card product-skeleton">
-          <div class="product-img-container general-skeleton"></div>
-          <div class="product-info">
-            <h3 class="product-info-title general-skeleton general-skeleton-text"></h3>
-            <p class="product-info-category general-skeleton general-skeleton-text"></p>
-            <span class="product-info-price general-skeleton general-skeleton-text"></span>
-            <button class="general-btn product-add-cart-btn general-skeleton"></button>
+        <article class="product-card">
+          <div class="product-img-container on-load-img-fn">
+            <img class="product-img" src="https://m.media-amazon.com/images/I/61vFg+YuXPL._AC_SX679_.jpg"
+              alt="Super Mario Odyssey - Figura">
           </div>
-        </article>
-        <article class="product-card product-skeleton">
-          <div class="product-img-container general-skeleton"></div>
           <div class="product-info">
-            <h3 class="product-info-title general-skeleton general-skeleton-text"></h3>
-            <p class="product-info-category general-skeleton general-skeleton-text"></p>
-            <span class="product-info-price general-skeleton general-skeleton-text"></span>
-            <button class="general-btn product-add-cart-btn general-skeleton"></button>
-          </div>
-        </article>
-        <article class="product-card product-skeleton">
-          <div class="product-img-container general-skeleton"></div>
-          <div class="product-info">
-            <h3 class="product-info-title general-skeleton general-skeleton-text"></h3>
-            <p class="product-info-category general-skeleton general-skeleton-text"></p>
-            <span class="product-info-price general-skeleton general-skeleton-text"></span>
-            <button class="general-btn product-add-cart-btn general-skeleton"></button>
+            <h3 class="product-info-title">Super Mario Odyssey - Figura</h3>
+            <p class="product-info-category">Videojuegos</p>
+            <span class="product-info-price">59.99</span>
+            <button onclick="showAddToCartModalJ(1)" class="general-btn product-add-cart-btn"
+              data-product-id="1">Agregar al carrito</button>
           </div>
         </article>
       </section>
@@ -155,7 +144,7 @@
     <section class="product-section">
       <div class="product-img-container on-load-img-fn general-skeleton">
         <img id="modal-product-img" class="product-img" src="https://m.media-amazon.com/images/I/61vFg+YuXPL._AC_SX679_.jpg"
-        alt="Imagen del producto a añadir">
+        alt="Super Mario Odyssey - Figura" alt="Imagen del producto a añadir">
       </div>
       <div class="product-details">
         <h4 class="product-title">Nombre del producto</h4>
@@ -163,19 +152,17 @@
           <p>Cantidad:</p>
           <div class="quantity-section">
             <button title="Restar" class="quantity-btn" id="substract-quantity">-</button>
-            <input type="number" id="product-quantity" value="1" />
+            <input type="text" id="product-quantity" value="999" />
             <button title="Agregar" class="quantity-btn" id="sum-quantity">+</button>
           </div>
           <footer class="confirm-add-product">
             <p id="modal-product-price">$150</p>
-            <input type="text" id="id-modal-input">
-            <button class="general-btn" id="add-to-cart-button">Agregar al carrito</button>
+            <button class="general-btn">Agregar al carrito</button>
           </footer>
         </div>
       </div>
     </section>
   </dialog>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script type="module" src="products.js"></script>
 </body>
 
