feat: Busqueda de productos

--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -78,6 +78,10 @@
             <span id="order-option">Todos</span>
           </button>
         </section>
+        <form class="search-section" id="search-form">
+          <input type="search" name="search" id="search-product-input">
+          <button title="Buscar Producto" class="general-btn material-symbols-outlined">search</button>
+        </form>
       </div>
     </header>
 
