--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -15,7 +15,7 @@
   
     <meta property="og:image:alt" content="Icono de la tienda">
     <title>WonderStore - Product details</title>
-    <link rel="stylesheet" href="details.css">
+    <link rel="stylesheet" href="details-content-image.css">
 </head>
 <body>
     <main>
@@ -30,7 +30,14 @@
                     <img class="main-content-image-section-image" src="" alt="Imagen">
                     
                 </div>
-                <img class="main-content-image-section-image" src="" alt="Imagen principal">
+                <div class="main-content-image-section-column">
+
+                    <img class="main-content-image-section-image" src="" alt="Imagen principal">
+                    <div class="main-content-image-section-shopping">
+                        <h4>A la gente le gusta esto?</h4>
+                        <p>x personas han comprado este producto</p>
+                    </div>
+                </div>
             </section>
         </div>
         <div class="main-content-info">
